src/golden/cards/templates/nested/typeerrors/test.golden/objects.fl
	object Obj
		ctor makeMe
		
		template format
	
	card UseObjects
		state
			Obj o

		template top
			field1 <- o
# this now produces an error in resolution (qv)
#			field2 <- o => format
			field3 <- o.format
			hold <- o
			hold2 <- o.format
